# brush

./: Cargo.toml  Trunk.toml
crates/brush-dataset/src/: splat_import.rs
crates/brush-desktop/: index.html
crates/brush-kernel/src/: lib.rs
crates/brush-render/src/: gaussian_splats.rs  lib.rs  render.rs
crates/brush-render/src/shaders/: helpers.wgsl  project_visible.wgsl  rasterize.wgsl  rasterize_backwards.wgsl
crates/brush-viewer/: Cargo.toml
crates/brush-viewer/src/: camera_controller.rs  lib.rs  simplicits_training.rs  viewer.rs
crates/brush-viewer/src/panels/: datasets.rs  dummy.rs  mod.rs  presets.rs  rerun.rs  scene.rs  stats.rs  tracing_debug.rs  training_options.rs  viewer_options.rs
crates/ody-simplicits/: Cargo.toml
crates/ody-simplicits/src/: lib.rs  losses.rs  materials.rs  model.rs  physics.rs  sampling.rs  skinning.rs  utils.rs
crates/odyexp-desktop/: Cargo.toml  index.html
crates/odyexp-desktop/assets/: manifest.json  sw.js
crates/odyexp-desktop/src/: main.rs
crates/odyexp-io/: Cargo.toml
crates/odyexp-io/src/: lib.rs  splat_import.rs
crates/odyexp-viewer/: Cargo.toml
crates/odyexp-viewer/src/: app_context.rs  camera_controller.rs  lib.rs  load.rs  main_panel.rs  scene_panel.rs  toolbar.rs  top_panel.rs  viewer.rs
crates/odyexp-viewer/src/draw/: grid.rs  math.rs  mod.rs
crates/odyexp-viewer/src/input/: input_manager.rs  mod.rs
