[package]
name = "ody-simplicits"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
glam.workspace = true
rand.workspace = true
tracing.workspace = true
parking_lot.workspace = true
log.workspace = true

tokio_with_wasm = { workspace = true, features = ["rt"] }
tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-util.workspace = true

burn.workspace = true
burn-wgpu.workspace = true
